fixed formatting of edit forms on log page since they were too wide, also changed colors on the form

--- a/client/src/style/App.css
+++ b/client/src/style/App.css
@@ -463,6 +463,9 @@ h1 span.mixed, h2 span.mixed {
   width: 500px;
 }
 
+.Form__box.edit {
+  width: 100%;
+}
 
 .Loading {
   display: inline-block;
